--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              tools:context=".EarthQuakeActivity"
+              android:orientation="vertical">
+
+        <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".EarthQuakeActivity"
-        android:id="@+id/earthquake_list">
+        android:id="@+id/earthquake_list"/>
 
-</ListView>
+        <TextView android:layout_height="wrap_content"
+                  android:layout_width="wrap_content"
+                  android:text="No Internet Connection!"
+                  android:textStyle="bold"
+                  android:gravity="center"
+                  android:textSize="10sp"/>
+
+</LinearLayout>
