--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -6,16 +6,37 @@
               tools:context=".EarthQuakeActivity"
               android:orientation="vertical">
 
+        <TextView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:text="Recent Earthquake Events"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:textColor="@android:color/holo_blue_light"
+                android:fontFamily="sans-serif-condensed-medium"/>
+
         <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/earthquake_list"/>
+        android:id="@+id/earthquake_list"
+        android:layout_margin="5sp"/>
 
-        <TextView android:layout_height="wrap_content"
+        <LinearLayout
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:paddingTop="50dp">
+
+                <TextView android:layout_height="wrap_content"
                   android:layout_width="wrap_content"
                   android:text="No Internet Connection!"
                   android:textStyle="bold"
                   android:gravity="center"
-                  android:textSize="10sp"/>
+                  android:textSize="15sp"
+                  android:layout_margin="5dp"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
 
 </LinearLayout>
