--- a/app/src/main/res/layout/earthquake_list.xml
+++ b/app/src/main/res/layout/earthquake_list.xml
@@ -3,14 +3,14 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="5dp">
+              android:padding="5dp"
+              android:layout_margin="5dp">
 
     <TextView android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               tools:text = "9.0"
               android:id="@+id/magnitude"
-              android:textColor="@android:color/black"
               android:layout_margin="5dp"/>
 
     <TextView android:layout_width="0dp"
